# rdkafka-rust-arm64-docker

./: Cargo.toml  Dockerfile  build.sh  qemu-aarch64-static
